<resources>
    <string name="app_name">%クイズ</string>
    <string name="question_label">％が高いのはどっち？</string>
    <string name="answer_button1">Button</string>
    <string name="answer_button2">Button</string>
    <string name="reset_button">リセット(Ad)</string>
    <string name="result_text_view" />
    <string name="kaisetsu_text_view1" />
    <string name="kaisetsu_text_view2" />
    <string name="count_label">Q</string>
    <string name="source_button">出典</string>
</resources>
