<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/questionLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questionLabel" />

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/answerBtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/countLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="347dp"
        android:layout_height="100dp"
        android:text="@string/answer_button1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/answerBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionLabel" />

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="347dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/answer_button2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn1" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn2" />

    <TextView
        android:id="@+id/kaisetsuTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaisetsu_text_view1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/sourceButton1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/answerBtn1"
        app:layout_constraintTop_toTopOf="@+id/sourceButton1" />

    <TextView
        android:id="@+id/kaisetsuTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaisetsu_text_view2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/sourceButton2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/answerBtn2"
        app:layout_constraintTop_toTopOf="@+id/sourceButton2" />

    <Button
        android:id="@+id/sourceButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/source_button"
        app:layout_constraintEnd_toEndOf="@+id/answerBtn1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <Button
        android:id="@+id/sourceButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/source_button"
        app:layout_constraintEnd_toEndOf="@+id/answerBtn2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn2" />
</androidx.constraintlayout.widget.ConstraintLayout>